More cleaning steps, removing rows with starttimes < 2023

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,12 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ca36599c",
+   "execution_count": 30,
+   "id": "73ceef2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d261a1be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num rows after cleaning 1871679\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.drop(['End_Lat', 'End_Lng'], axis=1)\n",
+    "\n",
+    "df['Start_Time'] = df['Start_Time'].str.split('.').str[0]\n",
+    "df['End_Time']   = df['End_Time'].str.split('.').str[0]\n",
+    "\n",
+    "df['Start_Time'] = pd.to_datetime(df['Start_Time'])\n",
+    "df['End_Time'] = pd.to_datetime(df['End_Time'])\n",
+    "df = df[df['Start_Time'].dt.year >= 2023]\n",
+    "df = df[df['End_Time'].dt.year >= 2023]\n",
+    "\n",
+    "new_df = df.dropna() #Removes all data with an empty cell\n",
+    "\n",
+    "new_df.to_csv('cleandata.csv', index=False)\n",
+    "\n",
+    "print('num rows after cleaning', len(new_df))\n",
+    "\n",
+    "df = pd.read_csv('cleandata.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ca36599c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "df = pd.read_csv('cleandata.csv')\n",
     "\n"
@@ -15,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -23,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "have all values? 5208003\n"
+      "have all values? 1871679\n"
      ]
     }
    ],
@@ -36,10 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3c201dbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the length of array 1871679 should match length of features 1871679\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "geojson = {\n",
