--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,65 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "73ceef2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('data.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d261a1be",
+   "id": "73ceef2b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num rows after cleaning 1871679\n"
+      "num rows after cleaning:  21209\n"
      ]
     }
    ],
    "source": [
-    "df = df.drop(['End_Lat', 'End_Lng'], axis=1)\n",
+    "# PURPOSE OF THIS CELL: clean raw data and set the dataframe to the csv of cleaned data\n",
+    "import pandas as pd\n",
     "\n",
+    "# TIP: make sure the Car Accidents data file is called \"data.csv\" locally\n",
+    "df = pd.read_csv('raw-data.csv')\n",
+    "\n",
+    "# Reformatting the start and end times to allow for filtering\n",
     "df['Start_Time'] = df['Start_Time'].str.split('.').str[0]\n",
     "df['End_Time']   = df['End_Time'].str.split('.').str[0]\n",
     "\n",
     "df['Start_Time'] = pd.to_datetime(df['Start_Time'])\n",
     "df['End_Time'] = pd.to_datetime(df['End_Time'])\n",
+    "\n",
+    "# Filtering the data to focus on accidents during specific years\n",
     "df = df[df['Start_Time'].dt.year >= 2023]\n",
     "df = df[df['End_Time'].dt.year >= 2023]\n",
     "\n",
-    "new_df = df.dropna() #Removes all data with an empty cell\n",
+    "# Filter to focus on California\n",
+    "df = df[df[\"State\"] == \"FL\"]\n",
     "\n",
-    "new_df.to_csv('cleandata.csv', index=False)\n",
+    "# Removes all records with an empty cell\n",
+    "new_df = df.dropna() \n",
     "\n",
-    "print('num rows after cleaning', len(new_df))\n",
+    "# Saves the cleaned data to its own csv file\n",
+    "new_df.to_csv('clean-data.csv', index=False)\n",
     "\n",
-    "df = pd.read_csv('cleandata.csv')"
+    "print('num rows after cleaning: ', len(new_df))\n",
+    "\n",
+    "# Setting the data frame to the cleaned data\n",
+    "df = pd.read_csv('clean-data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ca36599c",
+   "execution_count": 24,
+   "id": "38247d3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['FL'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "df = pd.read_csv('cleandata.csv')\n",
-    "\n"
+    "df[\"State\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -68,20 +78,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "have all values? 1871679\n"
+      "have all values? 21209\n"
      ]
     }
    ],
    "source": [
+    "# Converting starting lat and lng to an array\n",
+    "# Source: https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array\n",
     "latlng = df[['Start_Lat', 'Start_Lng']]\n",
     "array = latlng.to_numpy()\n",
-    "print('have all values?', len(array))\n",
-    "#https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array"
+    "print('have all values?', len(array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -89,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the length of array 1871679 should match length of features 1871679\n"
+      "the length of array 21209 should match length of features 21209\n"
      ]
     }
    ],
@@ -122,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "datacleaning",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
