Added filtering and zoom click

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -49,10 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -255,20 +262,20 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Severity\"].unique()\n",
+    "print(df[\"Severity\"].unique())\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -290,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
