--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
     "    }\n",
     "    geojson[\"features\"].append(feature)\n",
     "\n",
-    "with open(\"data.json\", \"w\") as f:\n",
+    "with open(\"FLdata.json\", \"w\") as f:\n",
     "    json.dump(geojson, f, indent=2)\n",
     "\n",
     "print('the length of array', len(array), 'should match length of features', len(geojson[\"features\"]))\n",
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "datacleaning",
    "language": "python",
    "name": "python3"
   },
@@ -354,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
