Added slider for datetime and code in jyptr notebook for extrating out startTime!

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "22f72b3d",
    "metadata": {},
    "outputs": [
@@ -427,233 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "38247d3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 4]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Source</th>\n",
-       "      <th>Severity</th>\n",
-       "      <th>Start_Time</th>\n",
-       "      <th>End_Time</th>\n",
-       "      <th>Start_Lat</th>\n",
-       "      <th>Start_Lng</th>\n",
-       "      <th>End_Lat</th>\n",
-       "      <th>End_Lng</th>\n",
-       "      <th>Distance(mi)</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Roundabout</th>\n",
-       "      <th>Station</th>\n",
-       "      <th>Stop</th>\n",
-       "      <th>Traffic_Calming</th>\n",
-       "      <th>Traffic_Signal</th>\n",
-       "      <th>Turning_Loop</th>\n",
-       "      <th>Sunrise_Sunset</th>\n",
-       "      <th>Civil_Twilight</th>\n",
-       "      <th>Nautical_Twilight</th>\n",
-       "      <th>Astronomical_Twilight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A-3650842</td>\n",
-       "      <td>Source1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-03-24 16:50:00</td>\n",
-       "      <td>2023-03-24 19:45:00</td>\n",
-       "      <td>29.019024</td>\n",
-       "      <td>-81.219254</td>\n",
-       "      <td>29.018383</td>\n",
-       "      <td>-81.224112</td>\n",
-       "      <td>0.297</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A-3650866</td>\n",
-       "      <td>Source1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-03-24 19:36:30</td>\n",
-       "      <td>2023-03-24 23:59:00</td>\n",
-       "      <td>28.742182</td>\n",
-       "      <td>-81.298842</td>\n",
-       "      <td>28.740334</td>\n",
-       "      <td>-81.300644</td>\n",
-       "      <td>0.168</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A-3651206</td>\n",
-       "      <td>Source1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-02-27 09:05:24</td>\n",
-       "      <td>2023-02-27 15:05:23</td>\n",
-       "      <td>30.253800</td>\n",
-       "      <td>-81.512367</td>\n",
-       "      <td>30.253080</td>\n",
-       "      <td>-81.516114</td>\n",
-       "      <td>0.229</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A-3651472</td>\n",
-       "      <td>Source1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-02-27 07:31:04</td>\n",
-       "      <td>2023-02-27 13:31:03</td>\n",
-       "      <td>28.568379</td>\n",
-       "      <td>-81.286192</td>\n",
-       "      <td>28.568183</td>\n",
-       "      <td>-81.286191</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "      <td>Day</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A-3651551</td>\n",
-       "      <td>Source1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-02-27 00:32:52</td>\n",
-       "      <td>2023-02-27 06:32:51</td>\n",
-       "      <td>27.429327</td>\n",
-       "      <td>-82.575542</td>\n",
-       "      <td>27.428724</td>\n",
-       "      <td>-82.575547</td>\n",
-       "      <td>0.042</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Night</td>\n",
-       "      <td>Night</td>\n",
-       "      <td>Night</td>\n",
-       "      <td>Night</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 46 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          ID   Source  Severity           Start_Time             End_Time  \\\n",
-       "0  A-3650842  Source1         2  2023-03-24 16:50:00  2023-03-24 19:45:00   \n",
-       "1  A-3650866  Source1         2  2023-03-24 19:36:30  2023-03-24 23:59:00   \n",
-       "2  A-3651206  Source1         2  2023-02-27 09:05:24  2023-02-27 15:05:23   \n",
-       "3  A-3651472  Source1         2  2023-02-27 07:31:04  2023-02-27 13:31:03   \n",
-       "4  A-3651551  Source1         2  2023-02-27 00:32:52  2023-02-27 06:32:51   \n",
-       "\n",
-       "   Start_Lat  Start_Lng    End_Lat    End_Lng  Distance(mi)  ... Roundabout  \\\n",
-       "0  29.019024 -81.219254  29.018383 -81.224112         0.297  ...      False   \n",
-       "1  28.742182 -81.298842  28.740334 -81.300644         0.168  ...      False   \n",
-       "2  30.253800 -81.512367  30.253080 -81.516114         0.229  ...      False   \n",
-       "3  28.568379 -81.286192  28.568183 -81.286191         0.014  ...      False   \n",
-       "4  27.429327 -82.575542  27.428724 -82.575547         0.042  ...      False   \n",
-       "\n",
-       "  Station   Stop Traffic_Calming Traffic_Signal Turning_Loop Sunrise_Sunset  \\\n",
-       "0   False  False           False           True        False            Day   \n",
-       "1   False  False           False           True        False            Day   \n",
-       "2   False  False           False          False        False            Day   \n",
-       "3   False  False           False           True        False            Day   \n",
-       "4   False  False           False          False        False          Night   \n",
-       "\n",
-       "  Civil_Twilight Nautical_Twilight Astronomical_Twilight  \n",
-       "0            Day               Day                   Day  \n",
-       "1            Day               Day                   Day  \n",
-       "2            Day               Day                   Day  \n",
-       "3            Day               Day                   Day  \n",
-       "4          Night             Night                 Night  \n",
-       "\n",
-       "[5 rows x 46 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(df[\"Severity\"].unique())\n",
-    "\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -668,14 +442,14 @@
    "source": [
     "# Converting starting lat and lng to an array\n",
     "# Source: https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array\n",
-    "latlng = df[['Start_Lat', 'Start_Lng', 'Severity']]\n",
-    "array = latlng.to_numpy()\n",
+    "properties = df[['Start_Lat', 'Start_Lng', 'Severity', 'Start_Time']]\n",
+    "array = properties.to_numpy()\n",
     "print('have all values?', len(array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -694,7 +468,7 @@
     "    \"features\": []\n",
     "}\n",
     "\n",
-    "for lat, lng, severity in array:\n",
+    "for lat, lng, severity, startTime in array:\n",
     "    feature = {\n",
     "        \"type\": \"Feature\",\n",
     "        \"geometry\": {\n",
@@ -702,7 +476,8 @@
     "            \"coordinates\": [lng, lat]\n",
     "        },\n",
     "        \"properties\": {\n",
-    "            \"severity\": [severity]\n",
+    "            \"severity\": [severity],\n",
+    "            \"starttime\": [startTime]\n",
     "        }\n",
     "    }\n",
     "    geojson[\"features\"].append(feature)\n",
@@ -714,11 +489,19 @@
     "\n",
     "#https://stackoverflow.com/questions/12309269/how-do-i-write-json-data-to-a-file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2570c014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datacleaning",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -732,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
