--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
@@ -261,14 +261,41 @@
     }
    ],
    "source": [
-    "df[\"Severity\"].unique()\n",
+    "# Run this cell to get a better idea of the content of each column\n",
+    "# The output is best viewed if you click 'view as a scrollable element' after running it\n",
+    "from pandas.api.types import is_numeric_dtype, is_bool_dtype\n",
     "\n",
-    "df.head()"
+    "def summarize_column(col, series, cat_threshold=50):\n",
+    "    colData = series\n",
+    "    \n",
+    "    print(f'--- {col} ---')\n",
+    "    if is_bool_dtype(colData):\n",
+    "        print('Type: boolean')\n",
+    "        counts = colData.value_counts(dropna=False)\n",
+    "        print('Counts:', counts.to_dict())\n",
+    "    elif is_numeric_dtype(colData):\n",
+    "        print('Type: numeric')\n",
+    "        print('Min:', colData.min())\n",
+    "        print('Max:', colData.max())\n",
+    "    else:\n",
+    "        nunique = colData.nunique(dropna=False)\n",
+    "        if nunique == 0:\n",
+    "            print('No values')\n",
+    "        elif nunique <= cat_threshold:\n",
+    "            uniques = colData.unique()\n",
+    "            print(f'Unique values ({nunique}):', uniques)\n",
+    "        else:\n",
+    "            print(f'Unique values count: {nunique} (showing first {cat_threshold}):')\n",
+    "            print(colData.unique()[:cat_threshold])\n",
+    "    print()\n",
+    "\n",
+    "for col in df.columns:\n",
+    "    summarize_column(col, df[col])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -283,14 +310,14 @@
    "source": [
     "# Converting starting lat and lng to an array\n",
     "# Source: https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array\n",
-    "latlng = df[['Start_Lat', 'Start_Lng', 'Severity']]\n",
-    "array = latlng.to_numpy()\n",
+    "properties = df[['Start_Lat', 'Start_Lng', 'Severity', 'Start_Time']]\n",
+    "array = properties.to_numpy()\n",
     "print('have all values?', len(array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -309,7 +336,7 @@
     "    \"features\": []\n",
     "}\n",
     "\n",
-    "for lat, lng, severity in array:\n",
+    "for lat, lng, severity, startTime in array:\n",
     "    feature = {\n",
     "        \"type\": \"Feature\",\n",
     "        \"geometry\": {\n",
@@ -317,12 +344,13 @@
     "            \"coordinates\": [lng, lat]\n",
     "        },\n",
     "        \"properties\": {\n",
-    "            \"severity\": [severity]\n",
+    "            \"severity\": [severity],\n",
+    "            \"starttime\": [startTime]\n",
     "        }\n",
     "    }\n",
     "    geojson[\"features\"].append(feature)\n",
     "\n",
-    "with open(\"data.json\", \"w\") as f:\n",
+    "with open(\"FLdata.json\", \"w\") as f:\n",
     "    json.dump(geojson, f, indent=2)\n",
     "\n",
     "print('the length of array', len(array), 'should match length of features', len(geojson[\"features\"]))\n",
