--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -476,41 +476,34 @@
     "            \"coordinates\": [lng, lat]\n",
     "        },\n",
     "        \"properties\": {\n",
-    "            \"weather\" : {\n",
-    "                \"temperature\": [temp],\n",
-    "                \"humidity\": [humid],\n",
-    "                \"visibility\": [visible],\n",
-    "                \"windchill\": [wchill],\n",
-    "                \"windspeed\": [wspeed],\n",
-    "                \"winddirection\": [wdirect],\n",
-    "            },\n",
-    "            \"time\" : {\n",
-    "                \"starttime\": [startTime],\n",
-    "                \"measure\": {\n",
-    "                    \"sunrise-sunset\": [sunrise],\n",
-    "                    \"civil-twilight\": [civil],\n",
-    "                    \"nautical-twilight\": [nautical],\n",
-    "                    \"astronomical-twilight\": [astron],\n",
-    "                },\n",
-    "            },\n",
-    "            \"metadata\" : {\n",
-    "                \"severity\": [severity],\n",
-    "                \"airportcode\": [airportcode],\n",
-    "                \"poi\": {\n",
-    "                    \"bump\": [bump],\n",
-    "                    \"crossing\": [crossing],\n",
-    "                    \"giveway\": [giveway],\n",
-    "                    \"junction\": [junction],\n",
-    "                    \"no-exit\": [no_exit],\n",
-    "                    \"railway\": [railway],\n",
-    "                    \"roundabout\": [roundabout],\n",
-    "                    \"station\": [station],\n",
-    "                    \"stop\": [stop],\n",
-    "                    \"traffic-calming\": [tcalm],\n",
-    "                    \"traffic-signal\": [tsig],\n",
-    "                    \"turning-loop\": [turnloop]\n",
-    "                }\n",
-    "            }\n",
+    "            \"temperature\": temp,\n",
+    "            \"humidity\": humid,\n",
+    "            \"precipitation\": percip,\n",
+    "            \"pressure\": pressure,\n",
+    "            \"visibility\": visible,\n",
+    "            \"windchill\": wchill,\n",
+    "            \"windspeed\": wspeed,\n",
+    "            \"winddirection\": wdirect,\n",
+    "            \"starttime\": startTime,\n",
+    "            \"sunrise_sunset\": sunrise,\n",
+    "            \"civil_twilight\": civil,\n",
+    "            \"nautical_twilight\": nautical,\n",
+    "            \"astronomical_twilight\": astron,\n",
+    "            \"severity\": severity,\n",
+    "            \"airportcode\": airportcode,\n",
+    "            \"amenity\": amenity,\n",
+    "            \"bump\": bump,\n",
+    "            \"crossing\": crossing,\n",
+    "            \"giveway\": giveway,\n",
+    "            \"junction\": junction,\n",
+    "            \"no_exit\": no_exit,\n",
+    "            \"railway\": railway,\n",
+    "            \"roundabout\": roundabout,\n",
+    "            \"station\": station,\n",
+    "            \"stop\": stop,\n",
+    "            \"traffic_calming\": tcalm,\n",
+    "            \"traffic_signal\": tsig,\n",
+    "            \"turning_loop\": turnloop\n",
     "        }\n",
     "    }\n",
     "    geojson[\"features\"].append(feature)\n",
