--- a/convert.ipynb
+++ b/convert.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -442,14 +442,14 @@
    "source": [
     "# Converting starting lat and lng to an array\n",
     "# Source: https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array\n",
-    "properties = df[['Start_Lat', 'Start_Lng', 'Temperature(F)', 'Humidity(%)', 'Precipitation(in)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Chill(F)', 'Wind_Speed(mph)', 'Wind_Direction', 'Start_Time', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight', 'Severity', 'Airport_Code', 'Amenity', 'Bump', 'Crossing', 'Give_Way', 'Junction', 'No_Exit', 'Railway', 'Roundabout', 'Station', 'Stop', 'Traffic_Calming', 'Traffic_Signal', 'Turning_Loop']]\n",
+    "properties = df[['Start_Lat', 'Start_Lng', 'Temperature(F)', 'Humidity(%)', 'Precipitation(in)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Chill(F)', 'Wind_Speed(mph)', 'Wind_Direction', 'Start_Time', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight', 'Severity', 'Airport_Code', 'Amenity', 'Bump', 'Crossing', 'Give_Way', 'Junction', 'No_Exit', 'Railway', 'Roundabout', 'Station', 'Stop', 'Traffic_Calming', 'Traffic_Signal', 'Turning_Loop', 'Description', 'Street', 'City', 'County', 'Zipcode']]\n",
     "array = properties.to_numpy()\n",
     "print('have all values?', len(array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
     "    \"features\": []\n",
     "}\n",
     "\n",
-    "for lat, lng, temp, humid, percip, pressure, visible, wchill, wspeed, wdirect, startTime, sunrise, civil, nautical, astron, severity, airportcode, amenity, bump, crossing, giveway, junction, no_exit, railway, roundabout, station, stop, tcalm, tsig, turnloop in array:\n",
+    "for lat, lng, temp, humid, percip, pressure, visible, wchill, wspeed, wdirect, startTime, sunrise, civil, nautical, astron, severity, airportcode, amenity, bump, crossing, giveway, junction, no_exit, railway, roundabout, station, stop, tcalm, tsig, turnloop, descrip, street, city, county, zipcode in array:\n",
     "    feature = {\n",
     "        \"type\": \"Feature\",\n",
     "        \"geometry\": {\n",
@@ -503,7 +503,12 @@
     "            \"stop\": stop,\n",
     "            \"traffic_calming\": tcalm,\n",
     "            \"traffic_signal\": tsig,\n",
-    "            \"turning_loop\": turnloop\n",
+    "            \"turning_loop\": turnloop,\n",
+    "            \"description\": descrip,\n",
+    "            \"street\": street,\n",
+    "            \"city\": city,\n",
+    "            \"county\": county,\n",
+    "            \"zipcode\": zipcode\n",
     "        }\n",
     "    }\n",
     "    geojson[\"features\"].append(feature)\n",
@@ -519,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "datacleaning",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
