Adjusted filter button + more cleaning for wind direction

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "id": "caa5b193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Grouped Wind Directions:\n",
+      "['CALM', 'E', 'N', 'NE', 'NW', 'S', 'SE', 'SW', 'VAR', 'W']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def group_wind_direction(direction):\n",
+    "    n_group = ['N']\n",
+    "    ne_group = ['NE', 'NNE', 'ENE']\n",
+    "    e_group = ['E']\n",
+    "    se_group = ['SE', 'ESE', 'SSE'] \n",
+    "    s_group = ['S']\n",
+    "    sw_group = ['SW', 'SSW', 'WSW']\n",
+    "    w_group = ['W']\n",
+    "    nw_group = ['NW', 'NNW', 'WNW']\n",
+    "    \n",
+    "    if direction in n_group:\n",
+    "        return 'N'\n",
+    "    elif direction in ne_group:\n",
+    "        return 'NE'\n",
+    "    elif direction in e_group:\n",
+    "        return 'E'\n",
+    "    elif direction in se_group:\n",
+    "        return 'SE'\n",
+    "    elif direction in s_group:\n",
+    "        return 'S'\n",
+    "    elif direction in sw_group:\n",
+    "        return 'SW'\n",
+    "    elif direction in w_group:\n",
+    "        return 'W'\n",
+    "    elif direction in nw_group:\n",
+    "        return 'NW'\n",
+    "    elif direction == 'CALM':\n",
+    "        return 'CALM'\n",
+    "    elif direction == 'VAR':\n",
+    "        return 'VAR'\n",
+    "    else:\n",
+    "        return direction\n",
+    "\n",
+    "df['Wind_Direction_Group'] = df['Wind_Direction'].apply(group_wind_direction)\n",
+    "\n",
+    "print('Unique Grouped Wind Directions:')\n",
+    "print(sorted(df['Wind_Direction_Group'].unique()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -442,14 +497,14 @@
    "source": [
     "# Converting starting lat and lng to an array\n",
     "# Source: https://stackoverflow.com/questions/31789160/convert-select-columns-in-pandas-dataframe-to-numpy-array\n",
-    "properties = df[['Start_Lat', 'Start_Lng', 'Temperature(F)', 'Humidity(%)', 'Precipitation(in)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Chill(F)', 'Wind_Speed(mph)', 'Wind_Direction', 'Start_Time', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight', 'Severity', 'Airport_Code', 'Amenity', 'Bump', 'Crossing', 'Give_Way', 'Junction', 'No_Exit', 'Railway', 'Roundabout', 'Station', 'Stop', 'Traffic_Calming', 'Traffic_Signal', 'Turning_Loop', 'Description', 'Street', 'City', 'County', 'Zipcode']]\n",
+    "properties = df[['Start_Lat', 'Start_Lng', 'Temperature(F)', 'Humidity(%)', 'Precipitation(in)', 'Pressure(in)', 'Visibility(mi)', 'Wind_Chill(F)', 'Wind_Speed(mph)', 'Wind_Direction_Group', 'Start_Time', 'Sunrise_Sunset', 'Civil_Twilight', 'Nautical_Twilight', 'Astronomical_Twilight', 'Severity', 'Airport_Code', 'Amenity', 'Bump', 'Crossing', 'Give_Way', 'Junction', 'No_Exit', 'Railway', 'Roundabout', 'Station', 'Stop', 'Traffic_Calming', 'Traffic_Signal', 'Turning_Loop', 'Description', 'Street', 'City', 'County', 'Zipcode']]\n",
     "array = properties.to_numpy()\n",
     "print('have all values?', len(array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
@@ -468,7 +523,7 @@
     "    \"features\": []\n",
     "}\n",
     "\n",
-    "for lat, lng, temp, humid, percip, pressure, visible, wchill, wspeed, wdirect, startTime, sunrise, civil, nautical, astron, severity, airportcode, amenity, bump, crossing, giveway, junction, no_exit, railway, roundabout, station, stop, tcalm, tsig, turnloop, descrip, street, city, county, zipcode in array:\n",
+    "for lat, lng, temp, humid, percip, pressure, visible, wchill, wspeed, wdirect_group, startTime, sunrise, civil, nautical, astron, severity, airportcode, amenity, bump, crossing, giveway, junction, no_exit, railway, roundabout, station, stop, tcalm, tsig, turnloop, descrip, street, city, county, zipcode in array:\n",
     "    feature = {\n",
     "        \"type\": \"Feature\",\n",
     "        \"geometry\": {\n",
@@ -483,7 +538,7 @@
     "            \"visibility\": visible,\n",
     "            \"windchill\": wchill,\n",
     "            \"windspeed\": wspeed,\n",
-    "            \"winddirection\": wdirect,\n",
+    "            \"winddirection\": wdirect_group,\n",
     "            \"starttime\": startTime,\n",
     "            \"sunrise_sunset\": sunrise,\n",
     "            \"civil_twilight\": civil,\n",
@@ -524,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datacleaning",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
