Read me and jyptr notebook

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "73ceef2b",
    "metadata": {},
    "outputs": [
@@ -18,29 +18,26 @@
     "# PURPOSE OF THIS CELL: clean raw data and set the dataframe to the csv of cleaned data\n",
     "import pandas as pd\n",
     "\n",
-    "# TIP: make sure the Car Accidents data file is called \"data.csv\" locally\n",
     "df = pd.read_csv('data.csv')\n",
     "\n",
-    "# Reformatting the start and end times to allow for filtering\n",
     "df['Start_Time'] = df['Start_Time'].str.split('.').str[0]\n",
     "df['End_Time']   = df['End_Time'].str.split('.').str[0]\n",
     "\n",
     "df['Start_Time'] = pd.to_datetime(df['Start_Time'])\n",
     "df['End_Time'] = pd.to_datetime(df['End_Time'])\n",
     "\n",
-    "# Filtering the data to focus on accidents during specific years\n",
     "df = df[df['Start_Time'].dt.year >= 2023]\n",
     "df = df[df['End_Time'].dt.year >= 2023]\n",
     "\n",
-    "# Filter to focus on California\n",
     "df = df[df[\"State\"] == \"FL\"]\n",
     "\n",
-    "# Removes all records with an empty cell\n",
+    "# removes all records with an empty cell\n",
     "new_df = df.dropna() \n",
     "\n",
-    "# Saves the cleaned data to its own csv file\n",
+    "# save the cleaned data to its own csv file\n",
     "new_df.to_csv('clean-data.csv', index=False)\n",
     "\n",
+    "#record number of remaining data rows after cleaning\n",
     "print('num rows after cleaning: ', len(new_df))\n",
     "\n",
     "# Setting the data frame to the cleaned data\n",
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "38247d3d",
    "metadata": {},
    "outputs": [
@@ -388,6 +385,9 @@
       "\n",
       "--- Astronomical_Twilight ---\n",
       "Unique values (2): ['Day' 'Night']\n",
+      "\n",
+      "--- Wind_Direction_Group ---\n",
+      "Unique values (10): ['SE' 'W' 'CALM' 'S' 'NW' 'E' 'NE' 'SW' 'N' 'VAR']\n",
       "\n"
      ]
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "caa5b193",
    "metadata": {},
    "outputs": [
@@ -474,15 +474,12 @@
     "    else:\n",
     "        return direction\n",
     "\n",
-    "df['Wind_Direction_Group'] = df['Wind_Direction'].apply(group_wind_direction)\n",
-    "\n",
-    "print('Unique Grouped Wind Directions:')\n",
-    "print(sorted(df['Wind_Direction_Group'].unique()))\n"
+    "df['Wind_Direction_Group'] = df['Wind_Direction'].apply(group_wind_direction)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4fcb55af",
    "metadata": {},
    "outputs": [
@@ -504,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "3c201dbe",
    "metadata": {},
    "outputs": [
